--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
     "react": "^18.3.1",
