--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.28.0",
     "sonner": "^1.7.1",
     "zod": "^3.24.1",
@@ -28,6 +30,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
