--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
