--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "emoji-mart": "^5.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
-    "motion": "^11.15.0",
+    "motion": "^11.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
