--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "emoji-mart": "^5.6.0",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "motion": "^11.18.2",
     "react": "^18.3.1",
